[gd_scene load_steps=14 format=3 uid="uid://7njven2nclbo"]

[ext_resource type="Script" path="res://PauseMenu.gd" id="1_e6qkl"]
[ext_resource type="Texture2D" uid="uid://c3vkdmw1qaplb" path="res://Assets/PauseMenu.png" id="1_ekq52"]
[ext_resource type="Texture2D" uid="uid://dcuerkgaa2c75" path="res://Assets/Dossier Button.png" id="2_4wcra"]
[ext_resource type="Texture2D" uid="uid://dlnbxwutmaej4" path="res://Assets/Back Button.png" id="3_2v15p"]
[ext_resource type="Texture2D" uid="uid://bel7q2uettxmu" path="res://Assets/Quit Button.png" id="4_txuq3"]
[ext_resource type="PackedScene" uid="uid://ddmae0xvbhevp" path="res://Dossier.tscn" id="6_bi8vw"]
[ext_resource type="AudioStream" uid="uid://dbumt5gxgymp6" path="res://Assets/Dossier Select.wav" id="7_uioiw"]
[ext_resource type="AudioStream" uid="uid://bte7sxjd6b4nq" path="res://Assets/Menu Select.wav" id="8_scgtf"]
[ext_resource type="AudioStream" uid="uid://2ktbmviy582b" path="res://Assets/MainThemeFinal.mp3" id="9_kxsmy"]

[sub_resource type="Animation" id="Animation_ouhwv"]
resource_name = "pause_expand"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PauseMenuBG:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gwh22"]
_data = {
"pause_expand": SubResource("Animation_ouhwv")
}

[sub_resource type="Animation" id="Animation_r88nx"]
resource_name = "pause_contract"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PauseMenuBG:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cdpeu"]
_data = {
"pause_contract": SubResource("Animation_r88nx")
}

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("1_e6qkl")

[node name="PauseMenuBG" type="TextureRect" parent="."]
process_mode = 2
layout_mode = 0
offset_left = 480.0
offset_top = 240.0
offset_right = 1440.0
offset_bottom = 720.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(480, 240)
texture = ExtResource("1_ekq52")

[node name="Dossier" type="Button" parent="PauseMenuBG"]
layout_mode = 0
offset_left = 75.0
offset_top = 265.0
offset_right = 330.0
offset_bottom = 365.0
focus_neighbor_left = NodePath("../Quit")
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_right = NodePath("../Back")
focus_neighbor_bottom = NodePath("../Back")
focus_next = NodePath("../Back")
focus_previous = NodePath("../Quit")
theme_override_font_sizes/font_size = 64
icon = ExtResource("2_4wcra")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Back" type="Button" parent="PauseMenuBG"]
layout_mode = 0
offset_left = 364.0
offset_top = 265.0
offset_right = 619.0
offset_bottom = 365.0
focus_neighbor_left = NodePath("../Dossier")
focus_neighbor_top = NodePath("../Dossier")
focus_neighbor_right = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../Dossier")
theme_override_font_sizes/font_size = 64
icon = ExtResource("3_2v15p")
flat = true
clip_text = true
icon_alignment = 1
expand_icon = true

[node name="Quit" type="Button" parent="PauseMenuBG"]
layout_mode = 0
offset_left = 654.0
offset_top = 265.0
offset_right = 909.0
offset_bottom = 365.0
focus_neighbor_left = NodePath("../Back")
focus_neighbor_top = NodePath("../Back")
focus_neighbor_right = NodePath("../Dossier")
focus_neighbor_bottom = NodePath("../Dossier")
focus_next = NodePath("../Dossier")
focus_previous = NodePath("../Back")
theme_override_font_sizes/font_size = 64
icon = ExtResource("4_txuq3")
flat = true
clip_text = true
icon_alignment = 1
expand_icon = true

[node name="Dossier" parent="." instance=ExtResource("6_bi8vw")]
visible = false

[node name="Dossier Back" type="Button" parent="Dossier"]
offset_left = 864.0
offset_top = 73.0
offset_right = 1038.0
offset_bottom = 150.0
theme_override_font_sizes/font_size = 50
icon = ExtResource("3_2v15p")
flat = true
clip_text = true
icon_alignment = 1
expand_icon = true

[node name="PauseMenuOpening" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gwh22")
}

[node name="PauseMenuClosing" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cdpeu")
}

[node name="HoverUIAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_uioiw")

[node name="SelectUIAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_scgtf")

[node name="MainThemetest" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_kxsmy")

[connection signal="focus_entered" from="PauseMenuBG/Dossier" to="." method="_on_dossier_focus_entered"]
[connection signal="focus_exited" from="PauseMenuBG/Dossier" to="." method="_on_dossier_focus_exited"]
[connection signal="mouse_entered" from="PauseMenuBG/Dossier" to="." method="_on_dossier_mouse_entered"]
[connection signal="mouse_exited" from="PauseMenuBG/Dossier" to="." method="_on_dossier_mouse_exited"]
[connection signal="pressed" from="PauseMenuBG/Dossier" to="." method="_on_dossier_pressed"]
[connection signal="focus_entered" from="PauseMenuBG/Back" to="." method="_on_back_focus_entered"]
[connection signal="focus_exited" from="PauseMenuBG/Back" to="." method="_on_back_focus_exited"]
[connection signal="mouse_entered" from="PauseMenuBG/Back" to="." method="_on_back_mouse_entered"]
[connection signal="mouse_exited" from="PauseMenuBG/Back" to="." method="_on_back_mouse_exited"]
[connection signal="pressed" from="PauseMenuBG/Back" to="." method="_on_back_pressed"]
[connection signal="focus_entered" from="PauseMenuBG/Quit" to="." method="_on_quit_focus_entered"]
[connection signal="focus_exited" from="PauseMenuBG/Quit" to="." method="_on_quit_focus_exited"]
[connection signal="mouse_entered" from="PauseMenuBG/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="PauseMenuBG/Quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="PauseMenuBG/Quit" to="." method="_on_quit_pressed"]
[connection signal="focus_entered" from="Dossier/Dossier Back" to="." method="_on_dossier_back_focus_entered"]
[connection signal="focus_exited" from="Dossier/Dossier Back" to="." method="_on_dossier_back_focus_exited"]
[connection signal="mouse_entered" from="Dossier/Dossier Back" to="." method="_on_dossier_back_mouse_entered"]
[connection signal="mouse_exited" from="Dossier/Dossier Back" to="." method="_on_dossier_back_mouse_exited"]
[connection signal="pressed" from="Dossier/Dossier Back" to="." method="_on_dossier_back_pressed"]
[connection signal="pressed" from="Dossier/Dossier Back" to="Dossier" method="_on_dossier_back_pressed"]
